--- a/content/خداحافظ-بله.md
+++ b/content/خداحافظ-بله.md
@@ -19,7 +19,7 @@ tags = ['بله', 'پیامرسان', 'امنیت']
 
 و ایشون یه برنامه ای نوشته بود و توی گیت هاب منتشر کرده بود و این api رو توش استفاده کرده بود و کامیت کرده بود، ولی بعدش فهمیده بود و کامیت های جدید زده بود
 
-اما دریغ از این که گیت هاب هیستوری داره و من هم اینو در آوردم
+اما دریغ از این که گیت هاب هیستوری داره و رفیق من هم اینو در آورد و بهم داد
 
 و بله! شماره من هم توشون پیدا شد!
 
