--- a/content/خداحافظ-بله.md
+++ b/content/خداحافظ-بله.md
@@ -1,6 +1,6 @@
 +++
 title = "خداحافظ بله!"
-date = "1404/05/07"
+date = "1404-05-07"
 description = "از بله رفتم! چرا؟ به کجا؟ اینجا توضیح میدم"
 [taxonomies]
 tags = ['بله', 'پیامرسان', 'امنیت']
